# compaction_analysis

./: README.md  config.yaml  pyproject.toml  requirements.txt
compaction_analysis/: __init__.py  config.py  model.py  plot.py
scripts/: plot_all.py  trigger_sensitivity.py
